adds binarytree package